# orchestration

./: .gitignore  CICD-Guide.md  CLAUDE.md  Overview.md  README.md  Summary.md  WORKSESSION.2025-11-20.md  YOUKI_INTEGRATION.md  check_path.sh  vudo-p2p-evolution.yaml  vudo-p2p-phase2.md
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: cd.yml  ci.yml
.hive-mind/: QUICK_REFERENCE.md  RESEARCH_FINDINGS.md  hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1765984467758-eo2clqxet.txt  session-1765984467767-wpvo8mbwc-auto-save-1765984497304.json
.swarm/: memory.db-shm  memory.db-wal
ai_native_orchestrator/: Cargo.toml  Dockerfile  cb.sh  docker-compose.yml  docker-compose.youki.yml
ai_native_orchestrator/cluster_manager/: Cargo.toml
ai_native_orchestrator/cluster_manager/src/: chitchat_manager.rs  mock.rs
ai_native_orchestrator/cluster_manager_interface/: Cargo.toml
ai_native_orchestrator/cluster_manager_interface/src/: lib.rs
ai_native_orchestrator/container_runtime/: Cargo.toml
ai_native_orchestrator/container_runtime/src/: lib.rs  mock.rs  youki.rs
ai_native_orchestrator/container_runtime_interface/: Cargo.toml
ai_native_orchestrator/container_runtime_interface/src/: lib.rs
ai_native_orchestrator/docs/: CONSENSUS_DESIGN.md  CONTAINER_GUIDE.md  README.md  UNIVRS_DEVTOOLS.md
ai_native_orchestrator/docs/ontology/retrospective/: api.dol  cluster.dol  container.dol  events.dol  state.dol
ai_native_orchestrator/mcp_server/: Cargo.toml
ai_native_orchestrator/mcp_server/src/: lib.rs  main.rs  server.rs
ai_native_orchestrator/mcp_server/src/tools/: cluster.rs  mod.rs  node.rs  workload.rs
ai_native_orchestrator/mcp_server/tests/: mcp_integration_tests.rs
ai_native_orchestrator/orchestrator_core/: Cargo.toml
ai_native_orchestrator/orchestrator_core/src/: lib.rs  main.rs
ai_native_orchestrator/orchestrator_core/tests/: reconciliation_integration_tests.rs
ai_native_orchestrator/orchestrator_shared_types/: Cargo.toml
ai_native_orchestrator/orchestrator_shared_types/src/: lib.rs
ai_native_orchestrator/scheduler_interface/: Cargo.toml
ai_native_orchestrator/scheduler_interface/src/: lib.rs
ai_native_orchestrator/scripts/: file_snap.sh
ai_native_orchestrator/state_store_interface/: Cargo.toml
ai_native_orchestrator/state_store_interface/src/: etcd_store.rs  in_memory.rs  lib.rs
ai_native_orchestrator/youki_runtime/: Cargo.toml
ai_native_orchestrator/youki_runtime/src/: lib.rs
docs/: NEXUS_NODE_SETUP_CHECKLIST.md  Overview.md  PHASE1_PROGRESS.md  README.md  VISION_SESSION.2025-11-21.md  VISION_SESSION.2025-12-17.md  WORKING_SESSION.2025-10-21.md  WORKING_SESSION.2025-12-20.md  WORKSPACE_GUIDE.md  YOUKI_INTERGRATION_DESIGN.md
ontology/prospective/identity/: identity-full-spec.md  identity.system.dol
ontology/prospective/scheduling/constraints/: feasibility.dol
ontology/prospective/storage/: storage-full-spec.md  storage.system.dol
ontology/retrospective/api/constraints/: authentication.temporal.dol  resource.path.validity.dol  signature.verification.dol  workload.validation.dol
ontology/retrospective/api/genes/: api.authentication.dol  api.error,handling.dol  api.logging.dol  api.persistence.dol  (+1 more)
orchestrator/: Cargo.toml  Dockerfile  MCP_GUIDE.md  MYCELIAL_ECONOMICS.md  docker-compose.yml
orchestrator/cluster_manager/src/: chitchat_manager.rs  lib.rs  mock.rs
orchestrator/cluster_manager_interface/: Cargo.toml
orchestrator/cluster_manager_interface/src/: lib.rs
orchestrator/container_runtime/: Cargo.toml
orchestrator/container_runtime/src/: image.rs  lib.rs  mock.rs  youki.rs  youki_cli.rs
orchestrator/container_runtime/src/oci_bundle/: builder.rs  mod.rs  rootfs.rs  spec.rs
orchestrator/container_runtime_interface/: Cargo.toml
orchestrator/container_runtime_interface/src/: lib.rs
orchestrator/docs/: ARCHITECTURE.md
orchestrator/mcp_server/src/: lib.rs  main.rs  server.rs
orchestrator/mcp_server/tests/: mcp_integration_tests.rs
orchestrator/observability/: Cargo.toml
orchestrator/observability/src/: events.rs  health.rs  lib.rs  metrics.rs  network_bridge.rs  network_messages.rs  server.rs  tracing_setup.rs  websocket.rs
orchestrator/orchestrator_core/: Cargo.toml
orchestrator/orchestrator_core/src/: lib.rs  main.rs
orchestrator/orchestrator_core/src/api/: auth.rs  error.rs  handlers.rs  mod.rs  routes.rs  state.rs
orchestrator/orchestrator_core/src/reconciliation/: actuate.rs  compare.rs  mod.rs  plan.rs  sense.rs
orchestrator/orchestrator_core/tests/: api_integration_tests.rs  reconciliation_integration_tests.rs  youki_integration.rs
orchestrator/orchestrator_shared_types/: Cargo.toml
orchestrator/orchestrator_shared_types/src/: lib.rs
orchestrator/scheduler_interface/: Cargo.toml
orchestrator/scheduler_interface/src/: bind.rs  filter.rs  lib.rs  resources.rs  score.rs  select.rs
orchestrator/scripts/: crt_youki.sh  test-dashboard-cluster.sh
orchestrator/state_store_interface/: Cargo.toml
orchestrator/state_store_interface/src/: etcd_store.rs  in_memory.rs  lib.rs  sqlite_store.rs
orchestrator/ui_cli/: Cargo.toml
orchestrator/ui_cli/src/: client.rs  error.rs  main.rs  output.rs
orchestrator/ui_cli/src/commands/: deploy.rs  init.rs  logs.rs  mod.rs  scale.rs  status.rs
orchestrator/user_config/: Cargo.toml
orchestrator/user_config/src/: automation.rs  config.rs  encryption.rs  error.rs  identity.rs  lib.rs  paths.rs  resources.rs  trust_policy.rs
terraform/: Makefile  README.md
terraform/environments/production/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/vm-aws/: main.tf  outputs.tf  security-groups.tf  user-data.sh  variables.tf
terraform/modules/vm-azure/: cloud-init.yaml  main.tf  network-security-group.tf  outputs.tf  variables.tf
terraform/modules/vm-gcp/: firewall.tf  main.tf  outputs.tf  startup-script.sh  variables.tf
terraform/modules/vm-oracle/: cloud-init.yaml  main.tf  outputs.tf  security-list.tf  variables.tf
(+63 files in other folders)
