[workspace]
    
members = [
    "orchestrator_core",
    "orchestrator_shared_types",
    "container_runtime_interface",
    "cluster_manager_interface",
    "scheduler_interface", "state_store_interface",
    # Future crates:
        # "mcp_server",
        # "cloud_agnostic_layer",
        # "orchestrator_cli",
]

resolver = "2" # Recommended for new projects

[workspace.dependencies]
# Common dependencies will go here
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
downcast-rs = "1.2.1"
anyhow = "1.0"
async-trait = "0.1.77" # For async methods in traits
