[package]
name = "cluster_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
cluster_manager_interface = { path = "../cluster_manager_interface" }
orchestrator_shared_types = { path = "../orchestrator_shared_types" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Optional Chitchat gossip integration
chitchat = { version = "0.9", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["mock-cluster"]
mock-cluster = []
chitchat-cluster = ["chitchat", "serde", "serde_json"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
