[package]
name = "orchestrator_core"
version = "0.1.0"
edition = "2024"

# [[bin]] # Add this section if you have a main.rs
# name = "orchestrator_daemon"
# path = "src/main.rs"



[dependencies]
# ... (existing dependencies)
anyhow = "1.0" # For easy error handling in main
uuid = { workspace = true } # For generating UUIDs in main for test
async-trait = { workspace = true } # For mock impls

# You might need to re-specify these if mocks are in the same crate and not separate
orchestrator_shared_types = { path = "../orchestrator_shared_types" }
container_runtime_interface = { path = "../container_runtime_interface" }
cluster_manager_interface = { path = "../cluster_manager_interface" }
scheduler_interface = { path = "../scheduler_interface" }