[package]
name = "orchestrator_core"
version = "0.1.0"
edition = "2024"

# Main daemon binary (demo/testing)
[[bin]]
name = "orchestrator_daemon"
path = "src/main.rs"

# Production node binary with cluster support
[[bin]]
name = "orchestrator_node"
path = "src/bin/node.rs"
required-features = ["cluster"]

[dependencies]
orchestrator_shared_types = { path = "../orchestrator_shared_types" }
container_runtime_interface = { path = "../container_runtime_interface" }
cluster_manager_interface = { path = "../cluster_manager_interface" }
scheduler_interface = { path = "../scheduler_interface" }
state_store_interface = { path = "../state_store_interface" }

# Optional cluster manager with chitchat support
cluster_manager = { path = "../cluster_manager", optional = true }

# Optional container runtime
container_runtime = { path = "../container_runtime", optional = true }

# Optional observability
observability = { path = "../observability", optional = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
downcast-rs = { workspace = true }
serde = { workspace = true }

[features]
default = []
cluster = ["cluster_manager/chitchat-cluster", "cluster_manager"]
runtime = ["container_runtime/mock-runtime", "container_runtime"]
observability = ["dep:observability"]
full = ["cluster", "runtime", "observability"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
uuid = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] } 
