[package]
name = "youki_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
orchestrator_shared_types = { path = "../orchestrator_shared_types" }
container_runtime_interface = { path = "../container_runtime_interface" }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# OCI runtime spec library
oci-spec = "0.6"

# For temporary directories for container bundles
tempfile = "3.8"

# For process management
nix = { version = "0.27", features = ["process", "signal"] }
