[package]
name = "container_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
container_runtime_interface = { path = "../container_runtime_interface" }
orchestrator_shared_types = { path = "../orchestrator_shared_types" }
tokio = { workspace = true, features = ["sync", "io-util", "fs"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Image pulling and extraction
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
futures-util = { version = "0.3", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }

# Optional Youki integration (using libcontainer directly)
libcontainer = { version = "0.5", optional = true }
oci-spec = { version = "0.8", optional = true }
nix = { version = "0.29", optional = true }

[features]
default = ["mock-runtime"]
mock-runtime = []
image-pull = ["reqwest", "flate2", "tar", "sha2", "hex", "futures-util", "tokio-util"]
# Uses libcontainer directly (requires root, Linux only)
youki-runtime = ["libcontainer", "oci-spec", "nix"]
# Uses youki CLI binary (recommended for most use cases)
youki-cli = ["image-pull"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.10"
