[package]
name = "orchestrator_core"
version = "0.1.0"
edition = "2021"

# Main daemon binary (demo/testing)
[[bin]]
name = "orchestrator_daemon"
path = "src/main.rs"

# Production node binary with cluster support
[[bin]]
name = "orchestrator_node"
path = "src/bin/node.rs"
required-features = ["cluster"]

[dependencies]
orchestrator_shared_types = { path = "../orchestrator_shared_types" }
container_runtime_interface = { path = "../container_runtime_interface" }
cluster_manager_interface = { path = "../cluster_manager_interface" }
scheduler_interface = { path = "../scheduler_interface" }
state_store_interface = { path = "../state_store_interface" }

# Optional cluster manager with chitchat support
cluster_manager = { path = "../cluster_manager", optional = true }

# Optional container runtime
container_runtime = { path = "../container_runtime", optional = true }

# Optional observability
observability = { path = "../observability", optional = true }

# Optional REST API
user_config = { path = "../user_config", optional = true }
axum = { version = "0.7", features = ["ws"], optional = true }

# Optional MCP server
mcp_server = { path = "../mcp_server", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors"], optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
http = { version = "1.0", optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1.5", optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
hex = { version = "0.4", optional = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
downcast-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
cluster = ["cluster_manager/chitchat-cluster", "cluster_manager"]
runtime = ["container_runtime/mock-runtime", "container_runtime"]
# Real container runtime using youki CLI (Linux only, requires youki binary)
youki-runtime = ["container_runtime/youki-cli", "container_runtime"]
observability = ["dep:observability"]
rest-api = ["user_config", "axum", "tower", "tower-http", "sha2", "base64", "chrono", "http", "http-body-util", "bytes", "ed25519-dalek", "hex"]
mcp = ["mcp_server"]
full = ["cluster", "runtime", "observability", "rest-api", "mcp"]
# Full with real container runtime
full-youki = ["cluster", "youki-runtime", "observability", "rest-api", "mcp"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
uuid = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
user_config = { path = "../user_config" }
axum = "0.7"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde_json = { workspace = true }
tempfile = "3.10"
state_store_interface = { path = "../state_store_interface", features = ["in-memory"] }
container_runtime_interface = { path = "../container_runtime_interface" }
cluster_manager_interface = { path = "../cluster_manager_interface" }
scheduler_interface = { path = "../scheduler_interface" }
