[package]
name = "ui_cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for AI-native orchestrator"
license = "MIT OR Apache-2.0"

[[bin]]
name = "orch"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

# Local crates
user_config = { path = "../user_config" }
orchestrator_shared_types = { path = "../orchestrator_shared_types" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "color"] }

# HTTP client for REST API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Ed25519 signing for authenticated requests
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Terminal output formatting
colored = "2.1"
tabled = "0.15"
indicatif = "0.17"

# WebSocket client for log streaming
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# URL handling
url = "2.5"

# YAML output
serde_yaml_ng = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.14"
wiremock = "0.6"
rand = "0.8"
