[package]
name = "user_config"
version = "0.1.0"
edition = "2021"
description = "User configuration, identity management, and trust policies for AI-native orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

# TOML parsing
toml = "0.8"

# Ed25519 cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"

# Age encryption (rage is the Rust implementation)
age = { version = "0.10", features = ["armor"] }
secrecy = "0.8"

# XDG paths
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding for keys
base64 = "0.22"

# Hex encoding
hex = "0.4"

# File permissions (Unix)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.14"
